Fixes on appSettings

--- a/api.mylayers/api.mylayers/appsettings.Development.json
+++ b/api.mylayers/api.mylayers/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "MyConnection": "server=DESKTOP-MT0M6S4;database=Seismic;trusted_connection=true;"
   }
 }
