--- a/api.mylayers/api.mylayers/appsettings.json
+++ b/api.mylayers/api.mylayers/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConnection": "server=DESKTOP-MT0M6S4;database=Seismic;trusted_connection=true;"
+    "MyConnection": "server=mylayers.database.windows.net;database=Seismic;user id=maylayers;password=mylayers@123456;Connection Timeout=0;"
   }
 }
