OperationalFront and Survey Controllers

--- a/api.mylayers/api.mylayers/appsettings.Development.json
+++ b/api.mylayers/api.mylayers/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
 
   "ConnectionStrings": {
-    "MyConnection": "server=mylayers.database.windows.net;database=myLayer;user id=maylayers;password=mylayers@123456;Connection Timeout=0;MultipleActiveResultSets=True;"
+    "MyConnection": "data source=DESKTOP-MT0M6S4;initial catalog=Seismic;persist security info=True;user id=Lumen;password=123456;Connection Timeout=0;MultipleActiveResultSets=True;"
   }
 }
