Generic Client Added

--- a/api.mylayers/api.mylayers/appsettings.json
+++ b/api.mylayers/api.mylayers/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "MediaDirectory": "C:/temp/",
   "ConnectionStrings": {
     "MyConnection": "server=mylayers.database.windows.net;database=myLayer;user id=maylayers;password=mylayers@123456;Connection Timeout=0;MultipleActiveResultSets=True;"
   }
