--- a/clientlib.mylayers/clientlib.mylayers.csproj
+++ b/clientlib.mylayers/clientlib.mylayers.csproj
@@ -1,7 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+  <TargetFramework>netcoreapp3.1</TargetFramework>
+  <PackageId>clientlib.mylayers</PackageId>
+  <Version>1.0.0</Version>
+  <Authors>Igor Matos</Authors>
+  <Company>GitHub</Company>
+  <PackageDescription>This package contains all the interfaces to mylayers</PackageDescription>
+  <RepositoryUrl>https://github.com/igormatos02/mylayerapi</RepositoryUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
