--- a/common.sismo/common.sismo/common.sismo.csproj
+++ b/common.sismo/common.sismo/common.sismo.csproj
@@ -1,9 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+  
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PackageId>common.sismo</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Igor Matos</Authors>
+    <Company>GitHub</Company>
+    <PackageDescription>This package contains all the interfaces to mylayers</PackageDescription>
+    <RepositoryUrl>https://github.com/igormatos02/mylayerapi</RepositoryUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <IsPackable>true</IsPackable>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" Version="5.0.9" />
