--- a/api.mylayers/api.mylayers/nuget.config
+++ b/api.mylayers/api.mylayers/nuget.config
@@ -5,6 +5,13 @@
     <add key="github" value="https://nuget.pkg.github.com/igormatos02/index.json" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
+  <activePackageSource>
+    <!-- Only one active source-->
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+
+    <!-- All non-disabled sources are active -->
+    <add key="All" value="(Aggregate source)" />
+  </activePackageSource>
   <packageSourceCredentials>
     <github>
       <add key="Username" value="igormatos02" />
