--- a/common.sismo/common.sismo/nuget.config
+++ b/common.sismo/common.sismo/nuget.config
@@ -3,7 +3,7 @@
   <packageSources>
     <clear />
     <add key="github" value="https://nuget.pkg.github.com/igormatos02/index.json" />
-    <add key="NuGet official package source" value="https://api.nuget.org/v3/index.json" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
   <packageSourceCredentials>
     <github>
