--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -22,6 +22,13 @@ jobs:
           dotnet-version: '3.1'
           include-prerelease: true
 
+      - task: NuGetCommand@2
+      displayName: 'NuGet restore'
+      inputs:
+        restoreSolution: '**/*.sln'
+        vstsFeed: 'feed guid'
+        includeNuGetOrg: true
+    
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
