--- a/api.mylayers/api.mylayers/api.mylayers.csproj
+++ b/api.mylayers/api.mylayers/api.mylayers.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RestoreAdditionalProjectSources>
+      https://api.nuget.org/v3/index.json;
+      https://www.myget.org/F/sixlabors/api/v3/index.json;
+      $(MSBuildThisFileDirectory)/../References/
+    </RestoreAdditionalProjectSources>
   </PropertyGroup>
 
   <ItemGroup>
