--- a/common.sismo/common.sismo/common.sismo.csproj
+++ b/common.sismo/common.sismo/common.sismo.csproj
@@ -7,24 +7,12 @@
     <Company>GitHub</Company>
     <PackageDescription>This package contains all the interfaces to mylayers</PackageDescription>
     <RepositoryUrl>https://github.com/igormatos02/mylayerapi</RepositoryUrl>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <PropertyGroup>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="nuget.config" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="nuget.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.NetTopologySuite" Version="5.0.9" />
