--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-  API_PROJECT_PATH: 'api.mylayers/api.mylayers.csproj'
+  PROJECT_PATH: 'api.mylayers/api.mylayers.csproj'
 
 jobs:
   build:
@@ -26,10 +26,10 @@ jobs:
           include-prerelease: true
       
       - name: Restore Packages
-        run: dotnet restore ${{ API_PROJECT_PATH }}
+        run: dotnet restore ${{ PROJECT_PATH }}
 
       - name: Build with dotnet
-        run: dotnet build ${{ API_PROJECT_PATH }} --configuration --no-restore Release
+        run: dotnet build ${{ PROJECT_PATH }} --configuration --no-restore Release
 
       - name: dotnet publish
         run: dotnet publish --self-contained true -r win-x86 -c Release -o ${{env.DOTNET_ROOT}}/myapp
