--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -27,12 +27,9 @@ jobs:
       
       - name: Add Access
         run: dotnet nuget add source --username igormatos02 --password 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 --store-password-in-clear-text --name github "https://nuget.pkg.github.com/igormatos02/index.json"
-
-      - name: Restore Packages
-        run: dotnet restore 
-
+        
       - name: Build with dotnet
-        run: dotnet build  --configuration --no-restore Release
+        run: dotnet build  --configuration  Release
 
       - name: dotnet publish
         run: dotnet publish --self-contained true -r win-x86 -c Release -o ${{env.DOTNET_ROOT}}/myapp
