--- a/client.mylayersapi/client.mylayersapi.csproj
+++ b/client.mylayersapi/client.mylayersapi.csproj
@@ -1,39 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <PackageId>client.mylayersapi</PackageId>
-    <Version>1.0.0</Version>
-    <Authors>Igor Matos</Authors>
-    <Company>GitHub</Company>
-    <PackageDescription>This package contains all the interfaces to mylayers</PackageDescription>
-    <RepositoryUrl>https://github.com/igormatos02/mylayerapi</RepositoryUrl>
   </PropertyGroup>
-  
-  <PropertyGroup>
-    <IsPackable>true</IsPackable>
-  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
   </ItemGroup>
-  <PropertyGroup>
-    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
-  </PropertyGroup>
+
   <ItemGroup>
-    <ProjectReference Include="..\clientlib.mylayers\clientlib.mylayers.csproj" PrivateAssets="All" />
-    <ProjectReference Include="..\common.sismo\common.sismo\common.sismo.csproj" PrivateAssets="All" />
+    <ProjectReference Include="..\clientlib.mylayers\clientlib.mylayers.csproj" />
+    <ProjectReference Include="..\common.sismo\common.sismo\common.sismo.csproj" />
   </ItemGroup>
-  <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="BuildOnlySettings;ResolveReferences">
-    <ItemGroup>
-      <!-- Filter out unnecessary files -->
-      <_ReferenceCopyLocalPaths Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference')-&gt;WithMetadataValue('PrivateAssets', 'All'))" />
-    </ItemGroup>
 
-    <!-- Print batches for debug purposes -->
-    <Message Text="Batch for .nupkg: ReferenceCopyLocalPaths = @(_ReferenceCopyLocalPaths), ReferenceCopyLocalPaths.DestinationSubDirectory = %(_ReferenceCopyLocalPaths.DestinationSubDirectory) Filename = %(_ReferenceCopyLocalPaths.Filename) Extension = %(_ReferenceCopyLocalPaths.Extension)" Importance="High" Condition="'@(_ReferenceCopyLocalPaths)' != ''" />
-
-    <ItemGroup>
-      <!-- Add file to package with consideration of sub folder. If empty, the root folder is chosen. -->
-      <BuildOutputInPackage Include="@(_ReferenceCopyLocalPaths)" TargetPath="%(_ReferenceCopyLocalPaths.DestinationSubDirectory)" />
-    </ItemGroup>
-  </Target>
 </Project>
