--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -26,7 +26,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: Pack
-        run: dotnet pack ~/common.sismo/common.sismo/common.sismo.csproj --configuration Release --version-suffix action-testing -o "./packages"
+        run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --configuration Release --version-suffix action-testing -o "./packages"
         
       - name: dotnet publish
         run: dotnet publish --self-contained true -r win-x86 -c Release -o ${{env.DOTNET_ROOT}}/myapp
