--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Pack
         run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --configuration Release --version-suffix action-testing -o "./packages"
         
+      - name: Deploy Package common.api
+        run: dotnet nuget push "common.sismo\common.sismo\bin\Release\common.sismo.1.0.0.nupkg"  --api-key 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 --source "github" 
+
       - name: dotnet publish
         run: dotnet publish --self-contained true -r win-x86 -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
