--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -28,9 +28,7 @@ jobs:
       - name: Pack
         run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --configuration Release --version-suffix action-testing -o "./packages"
       - name: Publish Pack
-        env:
-            NUGET_AUTH_TOKEN: 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
-            run: dotnet nuget push "bin/Release/common.sismo.1.0.0-action-testing.nupkg" --source "github"  ./packages/*.nupkg
+        run: dotnet nuget push "bin/Release/common.sismo.1.0.0-action-testing.nupkg"  --api-key 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 --source "github"  ./packages/*.nupkg
 
       - name: dotnet publish
         run: dotnet publish --self-contained true -r win-x86 -c Release -o ${{env.DOTNET_ROOT}}/myapp
