--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -25,13 +25,11 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
-      - name: Pack
-        run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --configuration Release --version-suffix action-testing -o "./packages"
-      - name: Publish Pack
-        run: dotnet nuget push --source https://nuget.pkg.github.com/igormatos02/index.json --api-key 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 'D:\a\mylayerapi\mylayerapi\packages\common.sismo.1.0.0-action-testing.nupkg'
-
-      - name: dotnet publish
-        run: dotnet publish --self-contained true -r win-x86 -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      - name: Add private GitHub registry to NuGet
+        run: nuget sources add -name "github" -Source https://nuget.pkg.github.com/igormatos02/index.json -Username igormatos02 -Password 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
+        
+      - name: Push generated package to GitHub registry
+        run: nuget push D:\a\mylayerapi\mylayerapi\packages\common.sismo.1.0.0-action-testing.nupkg -Source "github"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
