--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -21,49 +21,14 @@ jobs:
         with:
           dotnet-version: '3.1'
           include-prerelease: true
-      - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.7
-        with:
-           versionSpec: '5.x'
-      - name: Use GitVersion
-        id: gitversion # step id used as reference for output values
-        uses: gittools/actions/gitversion/execute@v0.9.7
-      - run: |
-                echo "Major: ${{ steps.gitversion.outputs.major }}"
-                echo "Minor: ${{ steps.gitversion.outputs.minor }}"
-                echo "Patch: ${{ steps.gitversion.outputs.patch }}"
-                echo "PreReleaseTag: ${{ steps.gitversion.outputs.preReleaseTag }}"
-                echo "PreReleaseTagWithDash: ${{ steps.gitversion.outputs.preReleaseTagWithDash }}"
-                echo "PreReleaseLabel: ${{ steps.gitversion.outputs.preReleaseLabel }}"
-                echo "PreReleaseNumber: ${{ steps.gitversion.outputs.preReleaseNumber }}"
-                echo "WeightedPreReleaseNumber: ${{ steps.gitversion.outputs.weightedPreReleaseNumber }}"
-                echo "BuildMetaData: ${{ steps.gitversion.outputs.buildMetaData }}"
-                echo "BuildMetaDataPadded: ${{ steps.gitversion.outputs.buildMetaDataPadded }}"
-                echo "FullBuildMetaData: ${{ steps.gitversion.outputs.fullBuildMetaData }}"
-                echo "MajorMinorPatch: ${{ steps.gitversion.outputs.majorMinorPatch }}"
-                echo "SemVer: ${{ steps.gitversion.outputs.semVer }}"
-                echo "LegacySemVer: ${{ steps.gitversion.outputs.legacySemVer }}"
-                echo "LegacySemVerPadded: ${{ steps.gitversion.outputs.legacySemVerPadded }}"
-                echo "AssemblySemVer: ${{ steps.gitversion.outputs.assemblySemVer }}"
-                echo "AssemblySemFileVer: ${{ steps.gitversion.outputs.assemblySemFileVer }}"
-                echo "FullSemVer: ${{ steps.gitversion.outputs.fullSemVer }}"
-                echo "InformationalVersion: ${{ steps.gitversion.outputs.informationalVersion }}"
-                echo "BranchName: ${{ steps.gitversion.outputs.branchName }}"
-                echo "Sha: ${{ steps.gitversion.outputs.sha }}"
-                echo "ShortSha: ${{ steps.gitversion.outputs.shortSha }}"
-                echo "NuGetVersionV2: ${{ steps.gitversion.outputs.nuGetVersionV2 }}"
-                echo "NuGetVersion: ${{ steps.gitversion.outputs.nuGetVersion }}"
-                echo "NuGetPreReleaseTagV2: ${{ steps.gitversion.outputs.nuGetPreReleaseTagV2 }}"
-                echo "NuGetPreReleaseTag: ${{ steps.gitversion.outputs.nuGetPreReleaseTag }}"
-                echo "VersionSourceSha: ${{ steps.gitversion.outputs.versionSourceSha }}"
-                echo "CommitsSinceVersionSource: ${{ steps.gitversion.outputs.commitsSinceVersionSource }}"
-                echo "CommitsSinceVersionSourcePadded: ${{ steps.gitversion.outputs.commitsSinceVersionSourcePadded }}"
-                echo "CommitDate: ${{ steps.gitversion.outputs.commitDate }}"
+      - name: 'Get Version'
+        id: version
+        uses: battila7/get-version-action@v2
            
       - name: Build with dotnet
         run: dotnet build --configuration Release
       - name: Pack
-        run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --configuration Release /p:PackageVersion=${{ steps.gitversion.outputs.commitDate }}beta -o "./packages" 
+        run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --configuration Release -p:PackageVersion=${{ steps.version.outputs.version-without-v }} -o "./packages" 
       - name: Push generated package to GitHub registry
         run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\common.sismo.1.0.1.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
 
