--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -21,14 +21,16 @@ jobs:
         with:
           dotnet-version: '3.1'
           include-prerelease: true
-      - name: 'Get Version'
-        id: version
-        uses: battila7/get-version-action@v2
+     
      
       - name: Build with dotnet
         run: dotnet build --configuration Release
+
+      - name: 'Get Version'
+        id: version
+        uses: battila7/get-version-action@v2
       - name: Pack
-        run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --configuration Release -p:PackageVersion=${{ steps.get_version.outputs.version }} -o "./packages" 
+        run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --include-symbols --configuration Release -p:PackageVersion=${{ steps.get_version.outputs.version }} -o "./packages" 
       - name: Push generated package to GitHub registry
         run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\common.sismo.1.0.1.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
 
