--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -30,7 +30,7 @@ jobs:
         id: version
         uses: battila7/get-version-action@v2
       - name: Pack
-        run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --include-symbols --configuration Release -p:PackageVersion=${{ steps.get_version.outputs.version-without-v }} -o "./packages" 
+        run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --include-symbols --configuration Release -p:PackageVersion=1.0.3 -o "./packages" 
       - name: Push generated package to GitHub registry
         run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\common.sismo.1.0.1.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
 
