--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -9,6 +9,8 @@ on:
       - master
   workflow_dispatch:
 
+env:
+    VERSION_NUMBER: '1.0.4'
 jobs:
   build:
     runs-on: windows-latest
@@ -30,9 +32,9 @@ jobs:
         id: version
         uses: battila7/get-version-action@v2
       - name: Pack
-        run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --include-symbols --configuration Release -p:PackageVersion=1.0.3 -o "./packages" 
+        run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --include-symbols --configuration Release -p:PackageVersion=${{ env.VERSION_NUMBER  }} -o "./packages" 
       - name: Push generated package to GitHub registry
-        run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\common.sismo.1.0.1.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
+        run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\common.sismo.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
