--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-    VERSION_NUMBER: '1.0.4'
+    VERSION_NUMBER: '1.0.5'
 jobs:
   build:
     runs-on: windows-latest
@@ -31,10 +31,20 @@ jobs:
       - name: 'Get Version'
         id: version
         uses: battila7/get-version-action@v2
-      - name: Pack
+      - name: Pack common.sismo
         run: dotnet pack common.sismo\common.sismo\common.sismo.csproj --include-symbols --configuration Release -p:PackageVersion=${{ env.VERSION_NUMBER  }} -o "./packages" 
       - name: Push generated package to GitHub registry
         run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\common.sismo.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
+
+      - name: Pack clientlib.mylayers
+        run: dotnet pack clientlib.mylayers\clientlib.mylayers.csproj --include-symbols --configuration Release -p:PackageVersion=${{ env.VERSION_NUMBER  }} -o "./packages" 
+      - name: Push generated package to GitHub registry
+        run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\clientlib.mylayers.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
+
+      - name: Pack client.mylayersapi
+        run: dotnet pack client.mylayersapi\client.mylayersapi.csproj --include-symbols --configuration Release -p:PackageVersion=${{ env.VERSION_NUMBER  }} -o "./packages" 
+      - name: Push generated package to GitHub registry
+        run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\client.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
