--- a/client.mylayersapi/client.mylayersapi.csproj
+++ b/client.mylayersapi/client.mylayersapi.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PackageId>client.mylayersapi</PackageId>
+    <Version>1.0.2</Version>
+    <Authors>Igor Matos</Authors>
+    <Company>GitHub</Company>
+    <PackageDescription>Client for mylayers Api</PackageDescription>
+    <RepositoryUrl>https://github.com/igormatos02/mylayerapi</RepositoryUrl>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
