--- a/clientlib.mylayers/clientlib.mylayers.csproj
+++ b/clientlib.mylayers/clientlib.mylayers.csproj
@@ -2,8 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PackageId>clientlib.mylayersapi</PackageId>
+    <Version>1.0.2</Version>
+    <Authors>Igor Matos</Authors>
+    <Company>GitHub</Company>
+    <PackageDescription>Generic Client for mylayers</PackageDescription>
+    <RepositoryUrl>https://github.com/igormatos02/mylayerapi</RepositoryUrl>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
-
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
