--- a/common.sismo/common.sismo/common.sismo.csproj
+++ b/common.sismo/common.sismo/common.sismo.csproj
@@ -1,14 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
  
   <PropertyGroup>
-   
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>common.sismo</PackageId>
     <Version>1.0.2</Version>
     <Authors>Igor Matos</Authors>
     <Company>GitHub</Company>
-    <PackageDescription>This package adds an Octocat!</PackageDescription>
+    <PackageDescription>Common Libraries for mylayers</PackageDescription>
     <RepositoryUrl>https://github.com/igormatos02/mylayerapi</RepositoryUrl>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
