--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-    VERSION_NUMBER: '1.0.9'
+    VERSION_NUMBER: '1.0.10'
 jobs:
   build:
     runs-on: windows-latest
@@ -39,14 +39,14 @@ jobs:
         run: dotnet pack client.mylayersapi\client.mylayersapi.csproj  --configuration Release -p:PackageVersion=${{ env.VERSION_NUMBER  }} -o "./packages" 
      
       - name: Push generated package to GitHub registry common.sismo
-        run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\common.sismo.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
-      
+        #run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\common.sismo.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
+        run : dotnet nuget push  D:\a\mylayerapi\mylayerapi\packages\common.sismo.${{ env.VERSION_NUMBER }}.nupkg --api-key  oy2axztgdoeqoki6yfwqt32alyjllbcepgmnntmkpxiqjy --source https://api.nuget.org/v3/index.json
       - name: Push generated package to GitHub registry clientlib.mylayers
-        run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\clientlib.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
-        
+        #run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\clientlib.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
+        run : dotnet nuget push  D:\a\mylayerapi\mylayerapi\packages\clientlib.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg --api-key  oy2axztgdoeqoki6yfwqt32alyjllbcepgmnntmkpxiqjy --source https://api.nuget.org/v3/index.json
       - name: Push generated package to GitHub registry client.mylayersapi
-        run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\client.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
-
+        #run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\client.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
+        run : dotnet nuget push  D:\a\mylayerapi\mylayerapi\packages\client.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg --api-key  oy2axztgdoeqoki6yfwqt32alyjllbcepgmnntmkpxiqjy --source https://api.nuget.org/v3/index.json
       - name: dotnet publish
         run: dotnet publish --self-contained true -r win-x86 -c Release -o ${{env.DOTNET_ROOT}}/myapp   
       
