--- a/apiclient.mylayersapi/apiclient.mylayersapi.csproj
+++ b/apiclient.mylayersapi/apiclient.mylayersapi.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <PackageId>client.mylayersapi</PackageId>
+    <PackageId>apiclient.mylayersapi</PackageId>
     <Version>1.0.2</Version>
     <Authors>Igor Matos</Authors>
     <Company>GitHub</Company>
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0-preview.1.21102.12" />
   </ItemGroup>
 
   <ItemGroup>
