--- a/.github/workflows/master_mylayersapi.yml
+++ b/.github/workflows/master_mylayersapi.yml
@@ -40,15 +40,15 @@ jobs:
      
       - name: Push generated package to  registry common.sismo
         #run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\common.sismo.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
-        run : dotnet nuget push  D:\a\mylayerapi\mylayerapi\packages\common.sismo.${{ env.VERSION_NUMBER }}.nupkg --api-key  oy2axztgdoeqoki6yfwqt32alyjllbcepgmnntmkpxiqjy --source https://api.nuget.org/v3/index.json
+        run : dotnet nuget push  D:\a\mylayerapi\mylayerapi\packages\common.sismo.${{ env.VERSION_NUMBER }}.nupkg --api-key  oy2axztgdoeqoki6yfwqt32alyjllbcepgmnntmkpxiqjy --source https://api.nuget.org/v3/index.json --skip-duplicate
 
       - name: Push generated package to  registry clientlib.mylayers
         #run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\clientlib.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
-        run : dotnet nuget push  D:\a\mylayerapi\mylayerapi\packages\clientlib.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg --api-key  oy2axztgdoeqoki6yfwqt32alyjllbcepgmnntmkpxiqjy --source https://api.nuget.org/v3/index.json
+        run : dotnet nuget push  D:\a\mylayerapi\mylayerapi\packages\clientlib.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg --api-key  oy2axztgdoeqoki6yfwqt32alyjllbcepgmnntmkpxiqjy --source https://api.nuget.org/v3/index.json --skip-duplicate
 
       - name: Push generated package to  registry apiclient.mylayersapi
         #run: dotnet nuget push D:\a\mylayerapi\mylayerapi\packages\client.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg  --api-key ${{ secrets.GITHUB_TOKEN  }} --source https://nuget.pkg.github.com/igormatos02/index.json 
-        run : dotnet nuget push  D:\a\mylayerapi\mylayerapi\packages\apiclient.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg --api-key  oy2axztgdoeqoki6yfwqt32alyjllbcepgmnntmkpxiqjy --source https://api.nuget.org/v3/index.json
+        run : dotnet nuget push  D:\a\mylayerapi\mylayerapi\packages\apiclient.mylayersapi.${{ env.VERSION_NUMBER }}.nupkg --api-key  oy2axztgdoeqoki6yfwqt32alyjllbcepgmnntmkpxiqjy --source https://api.nuget.org/v3/index.json --skip-duplicate
 
       - name: dotnet publish
         run: dotnet publish --self-contained true -r win-x86 -c Release -o ${{env.DOTNET_ROOT}}/myapp   
